--- a/config.ini
+++ b/config.ini
@@ -9,3 +9,9 @@ bearer_token = AAAAAAAAAAAAAAAAAAAAABbCagEAAAAAA9s2K5W%2FL3mR0J0xKFB8wjjjnGE%3Du
 access_token = 803726463165931520-ozJSt8g37T0V25uU0XExzP5KDkakVOJ
 
 access_token_secret = IH2RjfNvd3vQn8OynKPe0ZAoYmtDX42gXzDlxIaLQgwjJ
+
+[dynamodb]
+
+access_key_id = AKIAXYLNTVDOSMLCBWU4
+
+secret_access_key = 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
